--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ constrained memory/space resources.
 
 ** Command line tool now query for realm, hostname and service name properly.
 
+** Documentation updates and improvements.
+
 ** Self test improvements.
 
 ** Update of gnulib files.
