--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
 See the end for copying conditions.
 
-* Version 0.2.4 (unreleased)
+* Version 0.2.4 (released 2005-01-01)
 
 ** The CRAM-MD5 mechanism is now preferred over DIGEST-MD5.
 This decision was based on recent public research that suggest MD5 is
