--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.5 (unreleased)
+
 * Version 0.2.4 (released 2005-01-01)
 
 ** The CRAM-MD5 mechanism is now preferred over DIGEST-MD5.
