--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 ** Added self test of EXTERNAL mechanism.
 
+** Vietnamese translation added, thanks to Clytie Siddall.
+
 * Version 0.2.4 (released 2005-01-01)
 
 ** The CRAM-MD5 mechanism is now preferred over DIGEST-MD5.
