--- a/lib/NEWS
+++ b/lib/NEWS
@@ -9,6 +9,8 @@ This is only enabled if you use Libidn 0.5.0 or later.
 
 ** ANONYMOUS server reject empty and overlong tokens.
 
+** Typos in gsasl_strerror() messages fixed, thanks to Clytie Siddall.
+
 * Version 0.2.4 (released 2005-01-01)
 
 ** The CRAM-MD5 mechanism is now preferred over DIGEST-MD5.
