--- a/lib/po/sv.po
+++ b/lib/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU libgsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2005-01-01 19:36+0100\n"
+"POT-Creation-Date: 2005-02-08 12:37+0100\n"
 "PO-Revision-Date: 2004-04-16 00:19+0200\n"
 "Last-Translator: Simon Josefsson <simon@josefsson.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -20,7 +20,7 @@ msgid "Libgsasl success"
 msgstr "Libgsasl lyckades"
 
 #, fuzzy
-msgid "SASL mechanisms needs more data"
+msgid "SASL mechanism needs more data"
 msgstr "SASL mekanismen behöver mer data"
 
 msgid "Unknown SASL mechanism"
@@ -78,7 +78,7 @@ msgstr ""
 
 msgid ""
 "GSSAPI error creating a display name denoting the client in gss_display_name"
-"() in SASL library.  This is probably because the client suplied bad data."
+"() in SASL library.  This is probably because the client supplied bad data."
 msgstr ""
 
 msgid ""
@@ -89,7 +89,8 @@ msgstr ""
 msgid "SASL mechanism could not parse input"
 msgstr "SASL mekanism kunde inte tolka indata"
 
-msgid "Error authentication user"
+#, fuzzy
+msgid "Error authenticating user"
 msgstr "Fel vid autentisering av användare"
 
 msgid "Integrity error in application payload"
@@ -133,7 +134,8 @@ msgstr ""
 msgid "Could not prepare internationalized (non-ASCII) string."
 msgstr ""
 
-msgid "SASL function need larger buffer (internal error)"
+#, fuzzy
+msgid "SASL function needs larger buffer (internal error)"
 msgstr "SASL funktion behöver större buffer (internt fel)"
 
 msgid "Could not open file in SASL library"
