--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,90 @@
+2005-02-08  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po, po/vi.po: Generated.
+
+2005-02-08  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Version 0.2.5.
+
+2005-02-08  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2005-02-06  Simon Josefsson <simon@josefsson.org>
+
+	* src/error.c: Typos, reported by Clytie Siddall
+	<clytie@riverland.net.au>.
+
+2005-02-06  Simon Josefsson <simon@josefsson.org>
+
+	* po/LINGUAS, po/vi.po: Add.
+
+2005-01-29  Simon Josefsson <simon@josefsson.org>
+
+	* gl/size_max.h, gl/m4/alloca.m4, gl/m4/base64.m4,
+	gl/m4/codeset.m4, gl/m4/eoverflow.m4, gl/m4/glibc21.m4,
+	gl/m4/iconv.m4, gl/m4/intmax_t.m4, gl/m4/inttypes_h.m4,
+	gl/m4/lib-ld.m4, gl/m4/lib-link.m4, gl/m4/lib-prefix.m4,
+	gl/m4/longdouble.m4, gl/m4/longlong.m4, gl/m4/restrict.m4,
+	gl/m4/signed.m4, gl/m4/size_max.m4, gl/m4/stdbool.m4,
+	gl/m4/stdint_h.m4, gl/m4/strdup.m4, gl/m4/uintmax_t.m4,
+	gl/m4/ulonglong.m4, gl/m4/vasnprintf.m4, gl/m4/vasprintf.m4,
+	gl/m4/wchar_t.m4, gl/m4/wint_t.m4, gl/m4/xsize.m4: Update.
+
+2005-01-05  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2005-01-05  Simon Josefsson <simon@josefsson.org>
+
+	* src/saslprep.c: If we have pr29 functionality, use it to verify
+	output.
+
+2005-01-05  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Look for pr29.h and pr29_8z in libidn.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* external/server.c: Consistency.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* anonymous/server.c: Validate input better.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* anonymous/server.c: Validate upper token length as well.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* anonymous/server.c: Add comments.
+
+2005-01-02  Simon Josefsson <simon@josefsson.org>
+
+	* external/client.c: Return "" instead of NULL when no authzid.
+
+2005-01-01  Simon Josefsson <simon@josefsson.org>
+
+	* external/server.c: Wait for real token.
+
+2005-01-01  Simon Josefsson <simon@josefsson.org>
+
+	* external/server.c: Simplify.
+
+2005-01-01  Simon Josefsson <simon@josefsson.org>
+
+	* anonymous/server.c: Simplify.
+
+2005-01-01  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac: Bump versions.
+
 2005-01-01  Simon Josefsson <simon@josefsson.org>
 
 	* digest-md5/Makefile.am: Fix distcheck.
