--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.6 (unreleased)
+
 * Version 0.2.5 (released 2005-02-08)
 
 ** Added self test of EXTERNAL mechanism.
