--- a/THANKS
+++ b/THANKS
@@ -23,6 +23,7 @@ Paul Romero
 Mike Castle
 Martin Lambers
 Clytie Siddall
+Ryan Slack
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
