--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented GNU SASL.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-Version: GnuPG v1.4.0 (GNU/Linux)
+Version: GnuPG v1.4.3-cvs (GNU/Linux)
 Comment: This 0xB565716F key is used to sign releases of GNU SASL.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
@@ -63,68 +63,107 @@ P4zB5bIxsFCiQwt0n24IziY99Yr6xiIeKHfPs1NG8JcKCaaQxf+XG8wYXlIgrM/g
 VQWbPIouDmoZ6BC1M128lWSE5DM7Zp/9vuw2F6qn9bQk8sCEf4UMxaeluxjU/yO9
 yrM/3CqKeI88ROcIZJfuTTAZPVWIX2tl+Pf0uuZ8F4OIogT0DdFK4TdGb6xfril+
 qFZTl/t9Aqz8k/BZHEZNQDoVKam5ZNjNg25Tnm4MXxdWVY1zTTf9H2YcuIk22EoI
-J3TuTyMmyjJDKIFbTtOxf/Jb7Qu0IVNpbW9uIEpvc2Vmc3NvbiA8amFzQGV4dHVu
-ZG8uY29tPoj7BBMBAgBFAhsDBAsHAwIDFQIDAxYCAQIeAQIXgCIYZG5zOnNpbW9u
-Lmpvc2Vmc3Nvbi5vcmc/dHlwZT1DRVJUBQJCQFzPBQkGWKOkAAoJEO2iHpS1ZXFv
-LfME+QHcoVJUM3FqCzf/d+JhZvM5O0wtZ5qBxO793rsE7psgAcHVIe5f87QZNtDp
-7ZmrnugyBhC67H2FrQKr8lqsIvKbaSzjro8yUoQtswVSef/OrhqSgEqs08Aifa66
-sowT1ZWO181m4BCC7aoNRovx8Huy0P+Y1Z2btPA+uu6UvZLh2iKqMP+95zloNHNH
-ZWooG5THFQl0RdCJtybyDmLpn+uIRgQTEQIABgUCPVjyvwAKCRBXkynTwBsqIhf3
-AJ9HasyJd0rNkH3lpwDlhJDgwtDLKACfU2/szfpICh9H/vdaOqU+lUBD59GITAQT
-EQIADAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqSVhmdAJ45cjOYShnnI5U3KCmFiZTA
-439LwgCffaBYPJpMymrINwkRB4t2NxbtuhKIRgQTEQIABgUCQQDKfQAKCRCe11g/
-wU6ygvegAJ9cAzRBE2V+rw6AmHVBqVfDVIsllQCgoCgYAAAZvsXUc72NsrSjAgjy
-yx6IRgQTEQIABgUCQP8/dwAKCRCW/5nEJcDsC1uxAKC6gBDLFxVI90nAFw2HL0Gk
-fuZTewCgzz7P/bYsbVpLh21vUj7mlHw4s0GITAQSEQIADAUCQOBXPQWDAJO07AAK
-CRDIgd1HSuerR2AIAKCp7WDpLQxo+R+bvYXyKhPWCGsoRwCfT3Szw8ijOgtNX3dN
-Ns0Hv3mqbI+I2AQTAQIAIgIbAwQLBwMCAxUCAwMWAgECHgECF4AFAj69R0YFCQLV
-jhkACgkQ7aIelLVlcW8Y2QT+PjSaIJj37ijex+wJ/HBLkyydqWYVZhuTPTVMLst6
-DQModRBj3Xi7UYlgg7lJ6tRxarVuF/eYW6Zv4jx5FePxKLBeAG+H4FRQH+ogIXeB
-lDx41X7L25wjSxxPhQ4CwBNMmSKckD84LdQiPrygbX8JQLsJ08XuTzDG7740d0Ro
-tqxizGhYP0QJTD67VvffoQ0gLtB5chw7Pc9osT1+j4yizojYBBMBAgAiAhsDBAsH
-AwIDFQIDAxYCAQIeAQIXgAUCP6QrUQUJA7xyJgAKCRDtoh6UtWVxbwueBP4uh9ZE
-OuSjt2n5OpfuAablsrRzhlgPfluBMfjHNynEFsGjn81l81TCqStRln7wDUj95Zuf
-Si3YvoYSFG1jffGMk/k2trgINtT3kxaGkfns6dykBuV7Ki2wWqdJkTe1ibyai+RC
-qt+J1ldSUuHdfQZ5wALPJQRb4Hqi7M29azFHcfxbMLf3yGYyBuKC7eBVNVaR58UT
-FK6r0CX3T7eGuk8biNgEEwECACIFAjzVBysCGwMFCQHhM4AECwcDAgMVAgMDFgIB
-Ah4BAheAAAoJEO2iHpS1ZXFviPIE/RqtM3MxNqQOE7wEITTd3SKu7qwIUnapB6Hh
-QAVfLwpnnJu1YnEVP9DvGfS5cq6Mn31xeG7LuJwNHXfBaREobbQiMqI2/3LNBo1H
-fr6bnyaNm7VQOcZWbY9P1sQtiYpNWi6aLjhBaBTmWCrkpl9aGwDkFASpLm2n2TgI
-EGDfokLCNjEd+dbHKYDWFLIwo+aCY+bpoV34u/13eHmhNWz1ME6I2AQTAQIAIgIb
-AwQLBwMCAxUCAwMWAgECHgECF4AFAkFvxFQFCQWICykACgkQ7aIelLVlcW/xbgT8
-CO3clOxFv4L9gsJtxe6lRUISlvmjoiQigmw8PIQwGfTCRYA5oK4Mja47+1PzbqzY
-1AlEi3JyFpIQMDCpRhkhfHGjOVH2vap3aGXxSFr8JGM0SO1Z5+88uNo9N7RAi4ko
-aykIy+GYKypoyF9ULGj5QL/bUYgzLLG8etNasmE/Dl88mEXhY3wuPwaeIEbcv/HD
-HBymbv7VplP/3VhtANfOz4jYBBMBAgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUC
-QIa+KwUJBJ8E/gAKCRDtoh6UtWVxb5MYBP9mXwgamCiHt0gzNLTlTayHkmblTVMp
-9saKkSiuFaJr0yNXjEoXxmtLcD1ZQQecVx7dOskW8I6GycpJg3Px5rXnpfhVVjnH
-oZ16vE9toCxDZRDNAlGXpZaLDcBcHZ1hjhxmbPweAVQodqc7Aq2unYuzCgs52Qzh
-190wS6KlR41swpXcbcHOmO3wLBLay1aLOPtCb40KGGIB0Mq4pecsB2LPiEYEExEC
-AAYFAkJJAZAACgkQj8NyXz1o1jrrsQCgq7loSlMufZ2mUU89zv6iNElz69UAoNyY
-6spQqMiZlYiH5j+8kvA4diLziEwEEhECAAwFAkId8CMFgwA/IjEACgkQGCgra0U5
-SgFiygCeMS1yREf9GWkLXxuVYvARgNNKDDsAoKVBTM+DL0o1/ePv8yw/8SauXj5I
-iKIEEAECAAwFAkJG+cEFgwDmsQ4ACgkQv9buWFf3fwmU8gP+IEINaym7K7FUvZWu
-CkdJcHshCGVBlTOqI9YB1CTY8LNdRHp8jrRXBZFZODPAziH/1ZoiSQjsgTg88BUp
-xLLSgJHZOqhuPMWlLwa6WsytKGTkuFCnZ+mkmHKe7LVnjSKr8OrP7y5OhFtdVqb5
-dgi9SIeK2ass1Xo+9EWZbco+v/OITAQTEQIADAUCQklECgWDABPOSgAKCRBmvnH/
-Z0hog4MLAJ944IigkBwS97tCZ2Kyetc66duezwCfWloLaQ1th9xZ47hc6cd6CU9X
-DkeITAQQEQIADAUCQk2CtQWDAOAoGgAKCRA7jqQfgvYSQATSAKDPm9E4Q+qfxVAl
-ncPp0WFdAhKNqgCgvkGlugvpmXBQRSMegHxskZBPEhCJASIEEwECAAwFAkJhOZ0F
-gwDMcTIACgkQC3gy83PWLUH2Bgf9GHMCCYb349m66855EyPkJmlVRGI5Qi6m37rj
-RmvAjL+aBSFYoAYyUKefTyv3TsJ8l+bAQsoaRU6wbn7uc/LwoJUTByXFj7rPOoIT
-xx6Sa3VP1nYdXjCtarKmjzQTYU1cWwfKUbEA3fSgs4gpd801l6C21F+DbSmP8CbO
-tGb62Nv1Ux1CXiWn2r8VUy5AVWZ0VD4qvxxIGGn58R0vLxKC5gGFids9JdMhJd1S
-HQ0mFkZp/NpNOnbw2A0tfhaFspdQAoDEjOHTr9fs0PAUBrt5YcP2W+iNZ9KPfN2c
-707p/3vErSPxQZCoXBmnN2LA5weNIVWZnKuJPUeyQ5FwH9orPrirBDzVB3sBBQDY
-9NqhPxE2QUOVftQI4H29pEXGtf503uXpA747QyDt1V2Mi0SdppiQn6vgtd5wjjse
-iCxQYTFF0NgZPQOrtpnwaQLhQo9dzerYpZDeJvfCPeqcIabchf8jbj3J1gsDNDJa
-oxbT3AsHm/GE+LjKN63gVMZaa1hSUbMNvv7pVmKVhFO3LS+EUXhxVeU7ZH6+A/EU
-y9RzujxYYOdDeLJYCLORAAYpiMUEGAECAA8CGwwFAkJAXPYFCQZYo3sACgkQ7aIe
-lLVlcW8EywT7BopB1iV2DF3ZTKKeuI7QSYYABX2OLRxQ3C/t/dpnUsj6BlAy9HTF
-7QYRI6QJMEvxhvmQbURYoFTfWvuLXi5yV5MuDnyzpNlLaFR3fE2zUWEvp7icp6d2
-r/RTVhJjJvQjsPmlm/UAcOQ8bFZq4x7224Cg/TrapuElkoRPBVkS82Ji8qe5Np7X
-UrNVqQ2/XJC7EZafff382E7S1s4z23Bmyg==
-=Np5P
+J3TuTyMmyjJDKIFbTtOxf/Jb7QuITAQTEQIADAUCQtiwjQWDAFT6QgAKCRAYWdAf
+Z3uh7O3xAJ9eOYCw3j628a38DdnRufiLr6b7WACeKEZkcoccKcGoRhPudvNc9lU6
+0PWITAQTEQIADAUCQtiwsQWDAFT6HgAKCRCBwvfr4hO2ku7AAJ0WLl6JAMuusYtO
+GA9Tg7bLGBcO5wCeJarIRVZ+zUecs57tLYqGCxcMnOeITAQTEQIADAUCQtiw0QWD
+AFT5/gAKCRBrcOzZXcP0c9ohAKCRa86GI5EeQDWWG3l/6M0HnEApgACcDQqD8kpm
+sa8DugYlHddWzvNGz8WJAiIEEwECAAwFAkLYsPEFgwBU+d4ACgkQquPmzmahRGhf
+dA//cVfLmv3s4VjruQA4BxNcnljFkLHnCMfUwOUFUIPKaYwNxNkRHv5SWwsHlYcH
+70prr7spkUMO9XCHZqhdXc/UfJm+tjda9Ow3D8Ym4bR4uKaBDcSB6rxG7Tkde2Ok
+JeA1uD4ytbrfctsufByul04qgrW4ON4xHG15Na/aiyZdi4KKWCUNSiQsH5/gwlWn
+UQNhYFXJTBlBiHYok8KddvhP+9KGKDMy8JvuzFIGyVKUS8rbHOX64U/dYl9pT6Hs
+pQBwENOvNVomsL3sZarQD7aPRo27Z8N9qEjqiCXG2zITfBvO6ZLwYZOcF31TO5Mr
+rQRYSB3EBRnrhpGaYHl7eNDXFCX35/ijn3l84HUMJsDZaPStGq8TaSLpILoL1Xjb
+bCo9YLVuyJGHC5r5Q8koc/3MrYLjRFPtVtGXhu9046YbPJgkpQilXDVnMtpe8/w7
+wd1T4m2nOduf0sNWSKuw0oURx7/MdNv+ufCxFu4Er72eI98rmUjYC9pYD82mKEKP
+vMrByvXalYlQVwByMFWU5l6bW+c8UHB7RVJ0edSA0gHwRne4I1OTSTXyip4C4wyc
+uep5iRjMP/tdxeVxXIxjwvbemSqELne9divE0SHM1oBjJ4JGock5eCiMD8Vc1p1D
+dCJHLDv+cjtybnVs82Aeq9UKJgkgAAProq7LScFbQVrAgOeIRgQQEQIABgUCQvJK
+6wAKCRBu+K/ChldKyqCOAJ9AkAP98DwsbJH6i4bzevVYjXPRoQCcDEeTZeKu2OHO
+Y/QThvvWMWqJtjmITAQTEQIADAUCQvHAcAWDADvqXwAKCRApqihSMz58Iws7AJoC
+MHdbiQtimt2yIEwibpBYwnHVkQCeOz9rSyhHL2rbj55z08lmLlxkwai0IVNpbW9u
+IEpvc2Vmc3NvbiA8amFzQGV4dHVuZG8uY29tPoj7BBMBAgBFAhsDBAsHAwIDFQID
+AxYCAQIeAQIXgCIYZG5zOnNpbW9uLmpvc2Vmc3Nvbi5vcmc/dHlwZT1DRVJUBQJC
+QFzPBQkGWKOkAAoJEO2iHpS1ZXFvLfME+QHcoVJUM3FqCzf/d+JhZvM5O0wtZ5qB
+xO793rsE7psgAcHVIe5f87QZNtDp7ZmrnugyBhC67H2FrQKr8lqsIvKbaSzjro8y
+UoQtswVSef/OrhqSgEqs08Aifa66sowT1ZWO181m4BCC7aoNRovx8Huy0P+Y1Z2b
+tPA+uu6UvZLh2iKqMP+95zloNHNHZWooG5THFQl0RdCJtybyDmLpn+uIRgQTEQIA
+BgUCPVjyvwAKCRBXkynTwBsqIhf3AJ9HasyJd0rNkH3lpwDlhJDgwtDLKACfU2/s
+zfpICh9H/vdaOqU+lUBD59GITAQTEQIADAUCPV6wdQWDAVeKNgAKCRC8u8SVcYqS
+VhmdAJ45cjOYShnnI5U3KCmFiZTA439LwgCffaBYPJpMymrINwkRB4t2NxbtuhKI
+RgQTEQIABgUCQQDKfQAKCRCe11g/wU6ygvegAJ9cAzRBE2V+rw6AmHVBqVfDVIsl
+lQCgoCgYAAAZvsXUc72NsrSjAgjyyx6IRgQTEQIABgUCQP8/dwAKCRCW/5nEJcDs
+C1uxAKC6gBDLFxVI90nAFw2HL0GkfuZTewCgzz7P/bYsbVpLh21vUj7mlHw4s0GI
+TAQSEQIADAUCQOBXPQWDAJO07AAKCRDIgd1HSuerR2AIAKCp7WDpLQxo+R+bvYXy
+KhPWCGsoRwCfT3Szw8ijOgtNX3dNNs0Hv3mqbI+I2AQTAQIAIgIbAwQLBwMCAxUC
+AwMWAgECHgECF4AFAj69R0YFCQLVjhkACgkQ7aIelLVlcW8Y2QT+PjSaIJj37ije
+x+wJ/HBLkyydqWYVZhuTPTVMLst6DQModRBj3Xi7UYlgg7lJ6tRxarVuF/eYW6Zv
+4jx5FePxKLBeAG+H4FRQH+ogIXeBlDx41X7L25wjSxxPhQ4CwBNMmSKckD84LdQi
+PrygbX8JQLsJ08XuTzDG7740d0RotqxizGhYP0QJTD67VvffoQ0gLtB5chw7Pc9o
+sT1+j4yizojYBBMBAgAiAhsDBAsHAwIDFQIDAxYCAQIeAQIXgAUCP6QrUQUJA7xy
+JgAKCRDtoh6UtWVxbwueBP4uh9ZEOuSjt2n5OpfuAablsrRzhlgPfluBMfjHNynE
+FsGjn81l81TCqStRln7wDUj95ZufSi3YvoYSFG1jffGMk/k2trgINtT3kxaGkfns
+6dykBuV7Ki2wWqdJkTe1ibyai+RCqt+J1ldSUuHdfQZ5wALPJQRb4Hqi7M29azFH
+cfxbMLf3yGYyBuKC7eBVNVaR58UTFK6r0CX3T7eGuk8biNgEEwECACIFAjzVBysC
+GwMFCQHhM4AECwcDAgMVAgMDFgIBAh4BAheAAAoJEO2iHpS1ZXFviPIE/RqtM3Mx
+NqQOE7wEITTd3SKu7qwIUnapB6HhQAVfLwpnnJu1YnEVP9DvGfS5cq6Mn31xeG7L
+uJwNHXfBaREobbQiMqI2/3LNBo1Hfr6bnyaNm7VQOcZWbY9P1sQtiYpNWi6aLjhB
+aBTmWCrkpl9aGwDkFASpLm2n2TgIEGDfokLCNjEd+dbHKYDWFLIwo+aCY+bpoV34
+u/13eHmhNWz1ME6I2AQTAQIAIgIbAwQLBwMCAxUCAwMWAgECHgECF4AFAkFvxFQF
+CQWICykACgkQ7aIelLVlcW/xbgT8CO3clOxFv4L9gsJtxe6lRUISlvmjoiQigmw8
+PIQwGfTCRYA5oK4Mja47+1PzbqzY1AlEi3JyFpIQMDCpRhkhfHGjOVH2vap3aGXx
+SFr8JGM0SO1Z5+88uNo9N7RAi4koaykIy+GYKypoyF9ULGj5QL/bUYgzLLG8etNa
+smE/Dl88mEXhY3wuPwaeIEbcv/HDHBymbv7VplP/3VhtANfOz4jYBBMBAgAiAhsD
+BAsHAwIDFQIDAxYCAQIeAQIXgAUCQIa+KwUJBJ8E/gAKCRDtoh6UtWVxb5MYBP9m
+XwgamCiHt0gzNLTlTayHkmblTVMp9saKkSiuFaJr0yNXjEoXxmtLcD1ZQQecVx7d
+OskW8I6GycpJg3Px5rXnpfhVVjnHoZ16vE9toCxDZRDNAlGXpZaLDcBcHZ1hjhxm
+bPweAVQodqc7Aq2unYuzCgs52Qzh190wS6KlR41swpXcbcHOmO3wLBLay1aLOPtC
+b40KGGIB0Mq4pecsB2LPiEYEExECAAYFAkJJAZAACgkQj8NyXz1o1jrrsQCgq7lo
+SlMufZ2mUU89zv6iNElz69UAoNyY6spQqMiZlYiH5j+8kvA4diLziEwEEhECAAwF
+AkId8CMFgwA/IjEACgkQGCgra0U5SgFiygCeMS1yREf9GWkLXxuVYvARgNNKDDsA
+oKVBTM+DL0o1/ePv8yw/8SauXj5IiKIEEAECAAwFAkJG+cEFgwDmsQ4ACgkQv9bu
+WFf3fwmU8gP+IEINaym7K7FUvZWuCkdJcHshCGVBlTOqI9YB1CTY8LNdRHp8jrRX
+BZFZODPAziH/1ZoiSQjsgTg88BUpxLLSgJHZOqhuPMWlLwa6WsytKGTkuFCnZ+mk
+mHKe7LVnjSKr8OrP7y5OhFtdVqb5dgi9SIeK2ass1Xo+9EWZbco+v/OITAQTEQIA
+DAUCQklECgWDABPOSgAKCRBmvnH/Z0hog4MLAJ944IigkBwS97tCZ2Kyetc66due
+zwCfWloLaQ1th9xZ47hc6cd6CU9XDkeITAQQEQIADAUCQk2CtQWDAOAoGgAKCRA7
+jqQfgvYSQATSAKDPm9E4Q+qfxVAlncPp0WFdAhKNqgCgvkGlugvpmXBQRSMegHxs
+kZBPEhCJASIEEwECAAwFAkJhOZ0FgwDMcTIACgkQC3gy83PWLUH2Bgf9GHMCCYb3
+49m66855EyPkJmlVRGI5Qi6m37rjRmvAjL+aBSFYoAYyUKefTyv3TsJ8l+bAQsoa
+RU6wbn7uc/LwoJUTByXFj7rPOoITxx6Sa3VP1nYdXjCtarKmjzQTYU1cWwfKUbEA
+3fSgs4gpd801l6C21F+DbSmP8CbOtGb62Nv1Ux1CXiWn2r8VUy5AVWZ0VD4qvxxI
+GGn58R0vLxKC5gGFids9JdMhJd1SHQ0mFkZp/NpNOnbw2A0tfhaFspdQAoDEjOHT
+r9fs0PAUBrt5YcP2W+iNZ9KPfN2c707p/3vErSPxQZCoXBmnN2LA5weNIVWZnKuJ
+PUeyQ5FwH9orPohMBBMRAgAMBQJC2LCNBYMAVPpCAAoJEBhZ0B9ne6HsQUsAn2Ln
+//TsmEqIL/bcLtt8Vz82lqjCAJ9a5TbLuUOp4+h43F2CJjrUBL7CK4hMBBMRAgAM
+BQJC2LCxBYMAVPoeAAoJEIHC9+viE7aSucUAn0cfeij+j8djU6jDPm/trQHL5/Ko
+AJ4ySAysyVQ8U3fZ+OY3XfYKXPfVKIhMBBMRAgAMBQJC2LDRBYMAVPn+AAoJEGtw
+7Nldw/RzYR8An1jLVjT/3xOU0Xd9TV1ON39qxJetAKD6GoejRHaDXO2KBoQnrGVg
+p9wVUIkCIgQTAQIADAUCQtiw8QWDAFT53gAKCRCq4+bOZqFEaKNhD/kBDYg2FWKw
+IkSMlz0KZWoAFwoO9uUWqrbF7z8gwZKlOGW9gvcF0OPYoyvy094XrdqdtG8I2JqK
+fYgpaPr7jFU3ViaY1Mr8wQPqxfcmuKlsCfZjDxKaYHx4VKTiC5IXJ4guMeTlqzbT
+x3rnTZLm0SeyehmQDfIPTacVeiSAM0WLHEz0fPI5wYIBK7oDZQySItlRSCOJmIq5
+TEGVEb9B57IpezW4O0WwRqE6hw8TTn7puMHHdTrI8PSydoPAwSRmUxV8p2EL4ZYg
+TTUrtzv0mTeG7PdzU9Yc2TF3OXJwET1oake0PNLhriayDqdVlvs1h2F1KEIAotuM
+KXRd8CiURKlnahj7eWtt3IVir8PdoBzRAtT3+Jm8ES32x/TdXQ8KDt1wPs/0ekLM
+cIzyAISW6gVi+6utUpTvUXMQ/g/sQZXj2YrRTSjBNFP6WmE4hPc1h3JuJm0BbwXB
+0c8jE60YEGd0AHSJgPOdvra9AeNvMU6dn6c0Ts1boV035DvTZhTtUAb9kAc/T5ou
+NDwm8gsoob7E02UFRfhMIo0Zqj5Bn2mC0QCnSb9P8L1C6bAbZEFXe/UrnH+eKBr+
+YMYphTIWWZ/CSZhJwBaVDFCLzqr9Z/OirELSEJKCcG0VyxoigQfHmH6CRjM9K4Im
+J2r5rr4FKT3w88Gutxs9ypZW6XEhQ9Tj2YhGBBARAgAGBQJC8kruAAoJEG74r8KG
+V0rKw/0Anj3miI06v5jOKbRJt6wwLINA7N6RAJ9pdfC+4JZ+SMq0w9cO3NKGEsJ1
+2ohMBBMRAgAMBQJC8cBwBYMAO+pfAAoJECmqKFIzPnwjf58AoIpuzzaOyGF3g2Ky
+9dV9vqECBNs1AJ4jRU27Zwovy/hznIR9q+o+euIjoLirBDzVB3sBBQDY9NqhPxE2
+QUOVftQI4H29pEXGtf503uXpA747QyDt1V2Mi0SdppiQn6vgtd5wjjseiCxQYTFF
+0NgZPQOrtpnwaQLhQo9dzerYpZDeJvfCPeqcIabchf8jbj3J1gsDNDJaoxbT3AsH
+m/GE+LjKN63gVMZaa1hSUbMNvv7pVmKVhFO3LS+EUXhxVeU7ZH6+A/EUy9RzujxY
+YOdDeLJYCLORAAYpiMUEGAECAA8CGwwFAkJAXPYFCQZYo3sACgkQ7aIelLVlcW8E
+ywT7BopB1iV2DF3ZTKKeuI7QSYYABX2OLRxQ3C/t/dpnUsj6BlAy9HTF7QYRI6QJ
+MEvxhvmQbURYoFTfWvuLXi5yV5MuDnyzpNlLaFR3fE2zUWEvp7icp6d2r/RTVhJj
+JvQjsPmlm/UAcOQ8bFZq4x7224Cg/TrapuElkoRPBVkS82Ji8qe5Np7XUrNVqQ2/
+XJC7EZafff382E7S1s4z23Bmyg==
+=1tWK
 -----END PGP PUBLIC KEY BLOCK-----
 
 ----------------------------------------------------------------------
