--- a/lib/po/sv.po
+++ b/lib/po/sv.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: GNU libgsasl 0.0.15\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-04-16 21:12+0200\n"
+"POT-Creation-Date: 2005-08-10 12:46+0200\n"
 "PO-Revision-Date: 2004-04-16 00:19+0200\n"
 "Last-Translator: Simon Josefsson <simon@josefsson.org>\n"
 "Language-Team: Swedish <sv@li.org>\n"
@@ -16,253 +16,246 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/error.c:48
 msgid "Libgsasl success"
 msgstr "Libgsasl lyckades"
 
-#: src/error.c:52
 #, fuzzy
-msgid "SASL mechanisms needs more data"
+msgid "SASL mechanism needs more data"
 msgstr "SASL mekanismen behöver mer data"
 
-#: src/error.c:56
 msgid "Unknown SASL mechanism"
 msgstr "Okänd SASL mekanism"
 
-#: src/error.c:60
 msgid "SASL mechanism called too many times"
 msgstr "SASL mekanism anropad för många gånger"
 
-#: src/error.c:64
-msgid "SASL function need larger buffer (internal error)"
-msgstr "SASL funktion behöver större buffer (internt fel)"
-
-#: src/error.c:68
-msgid "Could not open file in SASL library"
-msgstr "Kunde inte öppna fil i SASL-biblioteket"
-
-#: src/error.c:72
-msgid "Could not close file in SASL library"
-msgstr "Kunde inte stänga fil i SASL-biblioteket"
-
-#: src/error.c:76
 msgid "Memory allocation error in SASL library"
 msgstr "Minnesallokeringsfel i SASL-biblioteket"
 
-#: src/error.c:80
 msgid "Base 64 coding error in SASL library"
 msgstr "Bas 64 kodningsfel i SASL-biblioteket"
 
-#: src/error.c:84
-msgid "Gcrypt error in SASL library"
+#, fuzzy
+msgid "Low-level crypto error in SASL library"
 msgstr "Fel från gcrypt i SASL-biblioteket"
 
-#: src/error.c:90
 msgid ""
 "GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
 "library.  This is a serious internal error."
 msgstr ""
 
-#: src/error.c:98
 msgid ""
 "GSSAPI library could not understand a peer name in gss_import_name() in SASL "
 "library.  This may be due to incorrect user supplied data."
 msgstr ""
 
-#: src/error.c:106
 msgid ""
 "GSSAPI error in client while negotiating security context in "
 "gss_init_sec_context() in SASL library.  This is most likely due "
 "insufficient credentials or malicious interactions."
 msgstr ""
 
-#: src/error.c:114
 msgid ""
 "GSSAPI error in server while negotiating security context in "
 "gss_init_sec_context() in SASL library.  This is most likely due "
 "insufficient credentials or malicious interactions."
 msgstr ""
 
-#: src/error.c:122
 msgid ""
 "GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
 "library.  This is most likely due to data corruption."
 msgstr ""
 
-#: src/error.c:130
 msgid ""
 "GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
 msgstr ""
 
-#: src/error.c:137
 msgid ""
 "GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
 "This is most likely due to not having the proper Kerberos key available in /"
 "etc/krb5.keytab on the server."
 msgstr ""
 
-#: src/error.c:146
 msgid ""
 "GSSAPI error creating a display name denoting the client in gss_display_name"
-"() in SASL library.  This is probably because the client suplied bad data."
+"() in SASL library.  This is probably because the client supplied bad data."
 msgstr ""
 
-#: src/error.c:154
 msgid ""
 "Other entity requested integrity or confidentiality protection in GSSAPI "
 "mechanism but this is currently not implemented."
 msgstr ""
 
-#: src/error.c:161
+msgid "SASL mechanism could not parse input"
+msgstr "SASL mekanism kunde inte tolka indata"
+
+#, fuzzy
+msgid "Error authenticating user"
+msgstr "Fel vid autentisering av användare"
+
+msgid "Integrity error in application payload"
+msgstr ""
+
+msgid "Client-side functionality not available in library (application error)"
+msgstr ""
+
+msgid "Server-side functionality not available in library (application error)"
+msgstr ""
+
+msgid "No callback specified by caller (application error)."
+msgstr ""
+
+msgid "Authentication failed because the anonymous token was not provided."
+msgstr ""
+
+msgid ""
+"Authentication failed because the authentication identity was not provided."
+msgstr ""
+
+msgid ""
+"Authentication failed because the authorization identity was not provided."
+msgstr ""
+
+msgid "Authentication failed because the password was not provided."
+msgstr ""
+
+msgid "Authentication failed because the passcode was not provided."
+msgstr ""
+
+msgid "Authentication failed because the pin code was not provided."
+msgstr ""
+
+msgid "Authentication failed because the service name was not provided."
+msgstr ""
+
+msgid "Authentication failed because the host name was not provided."
+msgstr ""
+
+msgid "Could not prepare internationalized (non-ASCII) string."
+msgstr ""
+
+#, fuzzy
+msgid "SASL function needs larger buffer (internal error)"
+msgstr "SASL funktion behöver större buffer (internt fel)"
+
+msgid "Could not open file in SASL library"
+msgstr "Kunde inte öppna fil i SASL-biblioteket"
+
+msgid "Could not close file in SASL library"
+msgstr "Kunde inte stänga fil i SASL-biblioteket"
+
+msgid "Cannot get internal library handle (library error)"
+msgstr "Kan inte hämta internt bibliotekskontext (biblioteksfel)"
+
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:168
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_password() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:175
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_passcode() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:182
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:189
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_authorization_id() callback "
 "(application error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:196
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_authentication_id() callback "
 "(application error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:203
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_client_callback_service() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:210
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_validate() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:217
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:224
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_digest_md5() callback "
 "(application error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:231
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:238
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_external() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:245
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_realm() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:252
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_securid() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:259
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_service() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:266
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:271
 #, fuzzy
 msgid ""
 "SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
 "error)"
 msgstr "SASL mekanismen behöver mer data (applikationsfel)"
 
-#: src/error.c:276
-msgid "SASL mechanism could not parse input"
-msgstr "SASL mekanism kunde inte tolka indata"
-
-#: src/error.c:280
-msgid "Error authentication user"
-msgstr "Fel vid autentisering av användare"
-
-#: src/error.c:284
-msgid "Cannot get internal library handle (library error)"
-msgstr "Kan inte hämta internt bibliotekskontext (biblioteksfel)"
-
-#: src/error.c:288
-msgid "Integrity error in application payload"
+msgid "Failed to perform Unicode Normalization on string."
 msgstr ""
 
-#: src/error.c:292
 msgid "No more realms available (non-fatal)"
 msgstr ""
 
-#: src/error.c:296
-msgid "Client-side functionality not available in library (application error)"
-msgstr ""
-
-#: src/error.c:301
-msgid "Server-side functionality not available in library (application error)"
-msgstr ""
-
-#: src/error.c:306
 msgid "The provided library handle was invalid (application error)"
 msgstr ""
 
-#: src/error.c:310
 msgid "Libgsasl unknown error"
 msgstr "Okänt fel i libgsasl"
